# mchmm

./: .travis.yml  DESCRIPTION.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.circleci/: config.yml
.github/workflows/: python-publish.yml  python-test.yml
docs/: requirements.txt
docs/source/: conf.py  hmm.rst  index.rst  install.rst  mc.rst  tutorials.rst
docs/source/_static/images/: mc.gv
images/: hmm.dot
mchmm/: __init__.py  _hmm.py  _mc.py
tests/: __init__.py  test_mchmm.py
