[metadata]
name = mchmm
version = attr: mchmm.__version__
author = maximtrp
author_email = maximtrp@gmail.com
description = Markov chains and Hidden Markov models
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
url = https://github.com/maximtrp/mchmm
keywords = markov chain, hidden markov model
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir = =mchmm
install_requires =
    numpy
    scipy
    graphviz

[options.packages.find]
where = mchmm
